Update Stocker Analysis Usage.ipynb

--- a/Stocker Analysis Usage.ipynb
+++ b/Stocker Analysis Usage.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Stock Analysis Using the Stocker \n",
     "\n",
-    "This notebook will walk through a basic example of using the Stocker class to analyze a stock. The Stocker class is built on the quandl financial library and the fbprophet additive model library but hides all that code behind the scenes so you can focus on making sense of the data! "
+    "This notebook will walk through a basic example of using a Stocker class to analyze a stock. The Stocker class is built on the quandl financial library and the fbprophet additive model library but hides all that code behind the scenes so you can focus on making sense of the data! "
    ]
   },
   {
